Fix color-contrast issues

--- a/src/globalStyles/header.scss
+++ b/src/globalStyles/header.scss
@@ -130,7 +130,7 @@ header {
 
 #main-nav li a:link,
 #main-nav li a:visited {
-    color: #777;
+    color: #6b6b6b;
 }
 
 #main-nav li a:hover {
